--- a/vue_app_ssp/public/index.html
+++ b/vue_app_ssp/public/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue_app_ssp</title>
+    <link rel="stylesheet" href="normal.css">
+    <title>ssp</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but vue_app_ssp doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but xz_admin_v2 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
